bindir = ../bin
bin_PROGRAMS = aime3

aime3_SOURCES = main.cpp MUD.cpp Entity.cpp EntityDB.cpp UserMgr.cpp Organism.cpp Player.cpp TCPServer.cpp FileDesc.cpp LogMgr.cpp TCPConn.cpp Handler.cpp ALMgr.cpp strfuncts.cpp ../external/pugixml.cpp
aime3_CPPFLAGS = -Wall -Wextra -Weffc++ -Wsign-conversion
aime3_LDFLAGS = -pthread
aime3_LDADD = -lconfig++

